--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#f4bc47"
-backgroundColor = "#1b1d22"
+backgroundColor = "#f88b34"
 secondaryBackgroundColor = "#323439"
 textColor = "#ffffff"
 font = "sans serif"
