--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#f4bc47"
 backgroundColor = "#f88b34"
-secondaryBackgroundColor = "#ffd526"
+secondaryBackgroundColor = "#463758"
 textColor = "#ffffff"
 font = "sans serif"
 
