--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#f4bc47"
-backgroundColor = "#f88b34"
-secondaryBackgroundColor = "#46378"
+backgroundColor = "#446378"
+secondaryBackgroundColor = "#f88b3"
 textColor = "#ffffff"
 font = "sans serif"
 
