--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#f4bc47"
-backgroundColor = "#463738"
+backgroundColor = "#948f8f"
 secondaryBackgroundColor = "#f88b3"
 textColor = "#ffffff"
 font = "sans serif"
