--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#f4bc47"
 backgroundColor = "#1b1d22"
-secondaryBackgroundColor = "#323439"
+secondaryBackgroundColor = "#ffd526"
 textColor = "#ffffff"
 font = "sans serif"
 
