--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#f4bc47"
-backgroundColor = "#f88b3"
-secondaryBackgroundColor = "#f88b3"
+backgroundColor = "#1b1d22"
+secondaryBackgroundColor = "#ffd526"
 textColor = "#ffffff"
 font = "sans serif"
 
