--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 attrs==23.2.0
+beautifulsoup4
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+chromadb
 click==8.1.7
 dataclasses-json==0.6.3
 distro==1.9.0
@@ -29,6 +31,7 @@ jsonschema-specifications==2023.12.1
 langchain==0.1.0
 langchain-community==0.0.10
 langchain-core==0.1.8
+langchain-openai
 langsmith==0.0.78
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
