--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
+anthropic
 anyio==4.2.0
 attrs==23.2.0
+beautifulsoup4
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+chromadb
 click==8.1.7
 dataclasses-json==0.6.3
 distro==1.9.0
@@ -29,6 +32,7 @@ jsonschema-specifications==2023.12.1
 langchain==0.1.0
 langchain-community==0.0.10
 langchain-core==0.1.8
+langchain-openai
 langsmith==0.0.78
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -62,6 +66,7 @@ smmap==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.25
 streamlit==1.29.0
+streamlit_lottie
 tenacity==8.2.3
 tiktoken==0.5.2
 toml==0.10.2
@@ -77,3 +82,8 @@ validators==0.22.0
 watchdog==3.0.0
 yarl==1.9.4
 zipp==3.17.0
+opencv-python-headless
+scikit-image
+pysqlite3-binary
+gpt_researcher
+pdfkit
