--- a/requirements.txt
+++ b/requirements.txt
@@ -85,3 +85,25 @@ zipp==3.17.0
 opencv-python-headless
 scikit-image
 pysqlite3-binary
+beautifulsoup4==4.10.0
+colorama==0.4.4
+duckduckgo_search==1.0.1
+md2pdf==0.1.5
+playwright==1.17.0
+pyyaml==6.0
+uvicorn==0.17.6
+pydantic==2.5.3
+fastapi==0.78.0
+python-multipart==0.0.5
+markdown==3.3.4
+tavily-python==0.1.0
+arxiv==1.4.2
+PyMuPDF==1.19.6
+aiofiles==0.8.0
+newspaper3k==0.2.8
+langchain-community==0.0.10
+mistune==2.0.4
+python-docx==0.8.11
+htmldocx==0.1.0
+lxml==4.8.0
+websockets==10.1
